# remoteVision

./: avcaptureremote.h  dmfunctions.h  end  main.cpp  qiproject.xml
RemoteVision/: CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  avcaptureremote.cpp  avcaptureremote.h  dataReader.cpp  dmfunctions.cpp  dmfunctions.h  icarus-client2.lisp  main.cpp  nearestneighbour.cpp  nearestneighbour.h  neuralNetwork.cpp  neuralNetwork.h  neuralNetworkTrainer.cpp  radonTransformer.h  server.cpp  server.h  ubyteextractor.cpp  ubyteextractor.h
RemoteVision/build-tc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  RemoteVision.cbp  cmake_install.cmake  dependencies.cmake  remoteVision.cbp
build-tc/: cmake_install.cmake  install_manifest.txt
